@@ -18,6 +18,7 @@
     as LoopStatus getter and setter.
 12. When checking if songs are different, compare track and disc numbers too.
 13. Avoid unknown song durations and duplicate updates of MPRIS' song details.
+14. Synchronize update of current song details and status of MPRIS interface.
 
 2.4.1
 -----
